--- a/.github/workflows/archive-modules.yaml
+++ b/.github/workflows/archive-modules.yaml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 18
       - name: Run a script to download all information
-      - run: node ./.github/workflows/archive-modules.js
+        run: node ./.github/workflows/archive-modules.js
       - name: Commit all new files 
