--- a/.github/workflows/archive-modules.yaml
+++ b/.github/workflows/archive-modules.yaml
@@ -15,6 +15,7 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
+      - run: npm install
       - name: Run a script to download all information
         run: node ./.github/workflows/archive-modules.js
       # - name: Commit all new files 
