--- a/.github/workflows/create-site.yaml
+++ b/.github/workflows/create-site.yaml
@@ -17,3 +17,4 @@ jobs:
           publish_dir: _site 
           publish_branch: gh-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          cname: archive.researchequals.com
