--- a/.github/workflows/archive-modules.yaml
+++ b/.github/workflows/archive-modules.yaml
@@ -20,4 +20,10 @@ jobs:
         run: node ./.github/workflows/archive-modules.js
       - name: Run a script to download all information for collections
         run: node ./.github/workflows/archive-collections.js
+      - uses: EndBug/add-and-commit@v9
+        with:
+          default_author: github_actions
+          committer_name: ResearchEquals Archiver
+          message: 'Nightly archive update'
+
       # - name: Commit all new files 
