--- a/.github/workflows/archive-modules.yaml
+++ b/.github/workflows/archive-modules.yaml
@@ -27,6 +27,7 @@ jobs:
           message: 'Nightly archive update'
   build_deploy:
     runs-on: ubuntu-latest
+    needs: run
     steps:
       - uses: actions/checkout@master
       - name: Build
