--- a/.github/workflows/archive-modules.yaml
+++ b/.github/workflows/archive-modules.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - uses: actions/setup-node@v3
         with:
           node-version: 18
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: run
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v4
       - name: Build
         uses: TartanLlama/actions-eleventy@master
       - name: Deploy
