--- a/.github/workflows/regenerate-pages.yaml
+++ b/.github/workflows/regenerate-pages.yaml
@@ -1,9 +1,9 @@
 name: Regenerate the pages for modules and collections
 
 on: workflow_dispatch
-# on: 
-  # schedule:
-  #   - cron: '0 0 * * * '
+# on:
+# schedule:
+#   - cron: '0 0 * * * '
 
 jobs:
   run:
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: 'npm'
+          cache: "npm"
       - run: npm install
       - name: Run a script to regenerate all information for modules
         run: node ./.github/workflows/regenerate-modules.js
@@ -24,18 +24,20 @@ jobs:
         with:
           default_author: github_actions
           committer_name: ResearchEquals Archiver
-          message: 'Update page templates'
+          message: "Update page templates"
   build_deploy:
     runs-on: ubuntu-latest
     needs: run
     steps:
       - uses: actions/checkout@master
       - name: Build
-        uses: TartanLlama/actions-eleventy@master
+        run: |
+          npm install
+          npm run build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          publish_dir: _site 
+          publish_dir: _site
           publish_branch: gh-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
           cname: archive.researchequals.com
